--- a/src/css/editor-style.css
+++ b/src/css/editor-style.css
@@ -11,16 +11,29 @@
 
 .container {
   border: 1px solid black;
+  display: grid;
+  grid-template-columns: 15% 85%;
+  background-color: #f5f5f5;
 }
-.toolbar {
-  height: 50px;
+#lion-editor-toolbar {
+  background-color: rgb(175, 175, 175);
+  margin: 10px;
+  padding: 20px;
+  border-radius: 10px;
 }
 .editableArea {
-  border: 2px solid orangered;
+  background-color: white;
+  border-radius: 10px;
+  width: 1000px;
   height: 600px;
+  margin: 60px 20px 40px 10px;
+  padding: 20px;
+  grid-column: 2 / 3;
+  grid-row: 1;
 }
 .lion-editor-buttonlist {
   display: flex;
+  flex-direction: column;
   gap: 20px;
   margin: 20px 0;
 }
@@ -28,7 +41,8 @@
   border: none;
   font-size: 16px;
   font-weight: 600;
-  background-color: #a1dfdf;
+  color: #3e3e3e;
+  background-color: #d9d9d9;
   height: 50px;
   width: 100px;
   border-radius: 10px;
@@ -36,4 +50,10 @@
 }
 .lion-editor-button:hover {
   background-color: #43bebf;
+}
+
+.textDecoration {
+  background-color: white;
+  /* grid-column: 3;
+  grid-row: 1; */
 }
