0718 新增toolbars資料夾並移動檔案與新增selection沒有選到東西的判斷式

--- a/src/css/editor-style.css
+++ b/src/css/editor-style.css
@@ -196,3 +196,18 @@ Modal Input Section
   gap: 20px;
   padding-right: 20px;
 }
+.embeded-card {
+  width: 500px;
+}
+
+.embeded-card iframe {
+  width: 100% !important;
+  /* height: 100% !important; */
+}
+.editor-image {
+  width: 300px;
+}
+.editor-image img {
+  width: 100%;
+  object-fit: cover;
+}
