--- a/src/css/editor-style.css
+++ b/src/css/editor-style.css
@@ -32,7 +32,7 @@ body {
   background-color: white;
   border-radius: 10px;
   width: 1000px;
-  height: 600px;
+  min-height: 600px;
   grid-column: 2;
   grid-row: 2;
   margin: 60px 20px 40px 10px;
@@ -196,13 +196,21 @@ Modal Input Section
   gap: 20px;
   padding-right: 20px;
 }
+.embeded-card-container {
+  width: 400px;
+}
 .embeded-card {
-  width: 500px;
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0px;
 }
 
 .embeded-card iframe {
-  width: 100% !important;
-  /* height: 100% !important; */
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
 }
 .editor-image {
   width: 300px;
