--- a/src/css/editor-style.css
+++ b/src/css/editor-style.css
@@ -209,8 +209,8 @@ Modal Input Section
   position: absolute;
   left: 0;
   top: 0;
-  height: 100%;
-  width: 100%;
+  height: 100% !important;
+  width: 100% !important;
 }
 .editor-image {
   width: 300px;
